 - GBA Video: Fix Hblank timing
 - GBA Video: Fix invalid read in mode 4 mosaic
 - SM83: Emulate HALT bug
Other fixes:
 - All: Improve export headers (fixes mgba.io/i/1738)
 - All: Correct format strings for some numbers on Windows (fixes mgba.io/i/1794)
 - Core: Ensure ELF regions can be written before trying
 - Debugger: Don't skip undefined instructions when debugger attached
 - GB Core: Fix extracting SRAM when none is present
 - GBA Savedata: Fix extracting save when not yet configured in-game
 - Qt: Force OpenGL paint engine creation thread (fixes mgba.io/i/1642)
 - Qt: Fix static compilation in MinGW (fixes mgba.io/i/1769)
 - Qt: Fix file handle leak on opening an invalid ROM
 - Qt: Fix a race condition in the frame inspector
 - Qt: Fix Italian RTC translation (fixes mgba.io/i/1798)
 - Qt: Add missing option for Wisdom Tree in overrides list
 - Util: Fix crash if PNG header fails to write
Misc:
 - Debugger: Keep track of global cycle count
 - FFmpeg: Add looping option for GIF/APNG
 - FFmpeg: Use range coder for FFV1 to reduce output size
 - Qt: Renderer can be changed while a game is running
 - Qt: Add hex index to palette view
 - Qt: Add transformation matrix info to sprite view
 - Qt: Add per-page scrolling to memory view (fixes mgba.io/i/1795)
 - Qt: Add setting to display ROM filename in title (closes mgba.io/i/1784)

0.8.2: (2020-06-14)
Emulation fixes:
 - ARM: Fix timing on Thumb shift instructions
 - GB: Fix GBC game registers after skipping BIOS
 - GB MBC: Support 4MB MBC30 ROMs (fixes mgba.io/i/1713)
 - GB Video: Fix BGPS value after skipping BIOS (fixes mgba.io/i/1717)
 - GBA: Add missing RTC overrides for Legendz games
 - GBA BIOS: Reset renderer when RegisterRamReset called (fixes mgba.io/i/1756)
 - GBA SIO: Fix Multiplayer busy bit
 - GBA SIO: Fix double-unloading active driver
 - GBA Timers: Fix deserializing count-up timers
 - GBA Video: Fix mosaic objects drawing past the end (fixes mgba.io/i/1702)