@@ -31,6 +31,7 @@ Other fixes:
  - All: Correct format strings for some numbers on Windows (fixes mgba.io/i/1794)
  - Core: Ensure ELF regions can be written before trying
  - Debugger: Don't skip undefined instructions when debugger attached
+ - FFmpeg: Fix some small memory leaks
  - GB Core: Fix extracting SRAM when none is present
  - GBA Savedata: Fix extracting save when not yet configured in-game
  - Qt: Force OpenGL paint engine creation thread (fixes mgba.io/i/1642)
